force-app/main/default/objects/zkups__UPSPickup__c/zkups__UPSPickup__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkups__pickupHelp</customHelpPage>
    <description>UPS Pickup is a collection of data that represents the details of a scheduled UPS pickup</description>
    <label>UPS Pickup</label>
    <nameField>
        <displayFormat>UPS-PICKUP-{000000}</displayFormat>
        <label>UPS Pickup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Pickups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>