force-app/main/default/objects/zkups__UPSPickup__c/fields/zkups__CloseTimeMinute__c.field-meta.xml
<CustomField>
    <fullName>zkups__CloseTimeMinute__c</fullName>
    <label>Close Time Minute</label>
    <length>5</length>
    <type>Text</type>
</CustomField>