force-app/main/default/objects/zkups__UPSPickup__c/fields/zkups__ContactName__c.field-meta.xml
<CustomField>
    <fullName>zkups__ContactName__c</fullName>
    <label>Contact Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>