force-app/main/default/objects/zkups__UPSPickup__c/fields/zkups__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>zkups__PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>