force-app/main/default/objects/zkups__UPSPickup__c/fields/zkups__PickupPoint__c.field-meta.xml
<CustomField>
    <fullName>zkups__PickupPoint__c</fullName>
    <label>Pickup Point</label>
    <length>15</length>
    <type>Text</type>
</CustomField>