force-app/main/default/objects/zkups__UPSPickup__c/fields/zkups__PRN__c.field-meta.xml
<CustomField>
    <fullName>zkups__PRN__c</fullName>
    <label>PRN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>