force-app/main/default/objects/zkups__UPSPickup__c/listViews/zkups__All.listView-meta.xml
<ListView>
    <fullName>zkups__All</fullName>
    <columns>NAME</columns>
    <columns>zkups__PickupCancelled__c</columns>
    <columns>zkups__PickupDate__c</columns>
    <columns>zkups__Street__c</columns>
    <columns>zkups__City__c</columns>
    <columns>zkups__State__c</columns>
    <columns>zkups__PostalCode__c</columns>
    <columns>zkups__CountryCode__c</columns>
    <columns>zkups__PickupPoint__c</columns>
    <columns>zkups__GrandTotalOfAllCharge__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>